[package]
name = "ziria"
authors = ["qtchaos"]
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.5.0", features = ["serde", "v4"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
base64 = "0.21.5"
serde_json = "1.0.64"
getrandom = { version = "0.2.11", features = ["js"] }
image = { version = "0.24.7", features = ["png"] }
dotenvy = "0.15.7"
worker = "0.0.18"

[lib]
crate-type = ["cdylib", "rlib"]
